// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1: prettier dir1 dir2  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`1a - with *.foo plugin: prettier dir1 dir2 --plugin=../../plugins/extensions/plugin.cjs  1`] = `
{
  "stdout": "dir1/a1.foo
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.foo
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`1c: prettier dir1 empty  1`] = `
{
  "stderr": "",
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js",
}
`;

exports[`2: prettier dir1 'dir2/**/*'  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/patterns-dirs/dir2/a2.foo".",
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`3: prettier nonexistent-dir 'dir2/**/*'  1`] = `
{
  "stderr": "[error] No files matching the pattern were found: "nonexistent-dir".
[error] No parser could be inferred for file "<cli>/patterns-dirs/dir2/a2.foo".",
  "stdout": "dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`4: prettier . 'dir2/**/*'  1`] = `
{
  "stderr": "",
  "stdout": "!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`Negative patterns 1: prettier dir1 '!dir1/nested1'  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js",
}
`;

exports[`Negative patterns 1a: prettier dir1 '!dir1/nested1/*'  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js",
}
`;

exports[`Negative patterns 2: prettier . '!dir1/nested1'  1`] = `
{
  "stdout": "!dir/a.js
dir1/a1.js
dir1/b1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`Negative patterns 3: prettier . '!dir1/nested1/an1.js'  1`] = `
{
  "stdout": "!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`Negative patterns 4: prettier '!nonexistent-dir1 !nonexistent-dir2'  1`] = `
{
  "stderr": "[error] No matching files. Patterns: !nonexistent-dir1 !nonexistent-dir2",
  "stdout": "",
}
`;

exports[`Negative patterns with explicit files: prettier dir1/a1.js dir2/a2.js '!dir1/*'  1`] = `
{
  "stderr": "[error] Explicitly specified file was ignored due to negative glob patterns: "dir1/a1.js".",
  "stdout": "dir2/a2.js",
}
`;

exports[`Trailing slash 1: prettier ./  1`] = `
{
  "stdout": "!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`Trailing slash 2: prettier .//  1`] = `
{
  "stdout": "!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang",
}
`;

exports[`Trailing slash 3: prettier dir1/  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js",
}
`;

exports[`Trailing slash 4: prettier dir1//  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js",
}
`;

exports[`Trailing slash 5: prettier .//dir2/..//./dir1//  1`] = `
{
  "stdout": "dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js",
}
`;

exports[`Trailing slash run in sub dir 1: prettier ..  1`] = `
{
  "stdout": "../!dir/a.js
../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
a2.js
b2.js
nested2/an2.js
nested2/bn2.js
node-shebang",
}
`;

exports[`Trailing slash run in sub dir 2: prettier ../  1`] = `
{
  "stdout": "../!dir/a.js
../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
a2.js
b2.js
nested2/an2.js
nested2/bn2.js
node-shebang",
}
`;

exports[`Trailing slash run in sub dir 3: prettier ../dir1  1`] = `
{
  "stdout": "../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js",
}
`;

exports[`Trailing slash run in sub dir 4: prettier ../dir1/  1`] = `
{
  "stdout": "../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js",
}
`;

exports[`plugins \`*\`  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/dirs/plugins/unknown.unknown".",
  "stdout": "javascript.js
plugin.uppercase-rocks",
}
`;

exports[`plugins \`.\`  1`] = `
{
  "stdout": "javascript.js
plugin.uppercase-rocks",
}
`;
